Fix bug where scrolling to bottom of bkGrid if overflow does not fully display bkCard

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ main {
     flex-wrap: wrap;
     justify-content: center;
     overflow: scroll;
-    height: 95%;
+    height: 85vh;
     width: 95%;
     border-radius: 20px;
     padding: 20px;
@@ -122,6 +122,7 @@ main {
 
 .bkPagesRead {
     justify-self: center;
+    accent-color: #680F15;
 }
 
 /* NOTE: Footer */
